syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.product";
option java_outer_classname = "ProductProto";
option objc_class_prefix = "HLW";

service ProductService {
  rpc CheckInventory(InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  string product_id = 1;
}

message InventoryResponse {
  string name = 1;
  string product_id = 2;
  int32 qty = 3;
}
